# sbpf-asm-debugger

./: .gitignore  Cargo.toml  README  diary.md
crates/assembler/: Cargo.toml
crates/assembler/src/: astnode.rs  instruction_verifier.rs  lib.rs  parser.rs  program.rs  section.rs  tokenizer.rs
crates/vm/: Cargo.toml
crates/vm/src/: instruction.rs  lib.rs  log_buffer.rs  program.rs  vm.rs
helios/: Cargo.toml
helios/src/: constant.rs  error.rs  main.rs
helios/src/cli/: mod.rs
helios/src/cli/assemble/: mod.rs
helios/src/cli/run/: mod.rs
helios/src/cli/tokenize/: mod.rs
test_file/: fib.s  hello.s  noop.s
vsextension/: README.md  package-lock.json  package.json  tsconfig.json
vsextension/scripts/: build-wasm.sh
vsextension/src/: extension.ts  sbpfDebug.ts
web/: index.html
web/scripts/: build-wasm.sh
web/wasm/: helios_vm.d.ts  helios_vm.js  helios_vm_bg.wasm  helios_vm_bg.wasm.d.ts
