[package]
name                   = "helios"
description            = "SBPF Assembler and Virtual Machine"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[[bin]]
name = "helios"
path = "src/main.rs"

[dependencies]
clap          = { workspace = true }
clap_complete = { workspace = true }
exitcode      = { workspace = true }
shadow-rs     = { workspace = true }
snafu         = { workspace = true }

helios-assembler = { workspace = true }
helios-vm = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
