[package]
name                   = "helios-vm"
description            = "SBPF Virtual Machine"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
wasm-bindgen = "0.2.100"

sbpf-assembler = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
codespan-reporting = "0.12.0"
